--- a/index.html
+++ b/index.html
@@ -5,6 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcards + Comparateur</title>
     <style>
+		:root{
+	/* Couleurs principales du thème */
+	--bg-gradient-from:#667eea;
+	--bg-gradient-to:#764ba2;
+	--primary:#667eea;
+	--primary-2:#764ba2;
+	--accent:#11998e;
+	--accent-2:#38ef7d;
+	--danger:#ff6b6b;
+	--text:#333333;
+	--text-soft:#666666;
+	--panel:#ffffff;
+	--panel-muted:#f5f7fa;
+	--border:#e0e0e0;
+	--shadow: rgba(0,0,0,0.08);
+
+	/* Cartes d’étude */
+	--card-bg:#ffffff;
+	--card-grad-from:#f5f7fa; /* fallback si tu gardes des dégradés */
+	--card-grad-to:#c3cfe2;
+
+	/* Stats */
+	--known:#38ef7d;
+	--partial:#f5a623;
+	--unknown:#ff6b6b;
+}
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); min-height: 100vh; display: flex; }
         .sidebar { width: 280px; background: white; box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1); display: flex; flex-direction: column; position: fixed; height: 100vh; left: 0; top: 0; z-index: 100; transition: transform 0.3s ease; }
@@ -284,6 +310,7 @@
     <div class="app-header" style="padding:10px 40px;">
         <button class="btn-comparator" onclick="openComparator()">
             🔍 Comparateur de texte
+		<button class="btn-comparator" onclick="openThemeModal()">🎨 Thème</button>
         </button>
     </div>
     <div id="homePage" class="page active">
@@ -414,6 +441,89 @@
 <div class="modal" id="renameCategoryModal"><div class="modal-content"><div class="modal-header">Renommer la catégorie</div><div class="input-group"><label for="renameCategoryInput">Nouveau nom :</label><input type="text" id="renameCategoryInput" placeholder="Nouveau nom"></div><div class="modal-buttons"><button class="btn-cancel" onclick="closeRenameCategoryModal()">Annuler</button><button class="btn-add" onclick="renameCategory()">Renommer</button></div></div></div>
 <div class="modal" id="renameFolderModal"><div class="modal-content"><div class="modal-header">Renommer le cours</div><div class="input-group"><label for="renameFolderInput">Nouveau nom :</label><input type="text" id="renameFolderInput" placeholder="Nouveau nom du cours"></div><div class="modal-buttons"><button class="btn-cancel" onclick="closeRenameFolderModal()">Annuler</button><button class="btn-add" onclick="renameFolder()">Renommer</button></div></div></div>
 <div class="modal" id="renameListModal"><div class="modal-content"><div class="modal-header">Renommer la liste</div><div class="input-group"><label for="renameListInput">Nouveau nom :</label><input type="text" id="renameListInput" placeholder="Nouveau nom de la liste"></div><div class="modal-buttons"><button class="btn-cancel" onclick="closeRenameListModal()">Annuler</button><button class="btn-add" onclick="renameList()">Renommer</button></div></div></div>
+<div class="modal" id="themeModal">
+	<div class="modal-content">
+		<div class="modal-header">Thème</div>
+
+		<div class="input-group">
+			<label>Dégradé de fond — départ</label>
+			<input type="color" id="th_bg_from">
+		</div>
+		<div class="input-group">
+			<label>Dégradé de fond — fin</label>
+			<input type="color" id="th_bg_to">
+		</div>
+
+		<div class="input-group">
+			<label>Couleur primaire</label>
+			<input type="color" id="th_primary">
+		</div>
+		<div class="input-group">
+			<label>Couleur primaire 2</label>
+			<input type="color" id="th_primary2">
+		</div>
+
+		<div class="input-group">
+			<label>Accent</label>
+			<input type="color" id="th_accent">
+		</div>
+		<div class="input-group">
+			<label>Accent 2</label>
+			<input type="color" id="th_accent2">
+		</div>
+
+		<div class="input-group">
+			<label>Texte principal</label>
+			<input type="color" id="th_text">
+		</div>
+		<div class="input-group">
+			<label>Texte secondaire</label>
+			<input type="color" id="th_text_soft">
+		</div>
+
+		<div class="input-group">
+			<label>Fond des panneaux</label>
+			<input type="color" id="th_panel">
+		</div>
+		<div class="input-group">
+			<label>Fond atténué</label>
+			<input type="color" id="th_panel_muted">
+		</div>
+		<div class="input-group">
+			<label>Bordures</label>
+			<input type="color" id="th_border">
+		</div>
+
+		<div class="input-group">
+			<label>Fond des cartes d’étude</label>
+			<input type="color" id="th_card_bg">
+		</div>
+
+		<div class="input-group">
+			<label>Couleur “Connu”</label>
+			<input type="color" id="th_known">
+		</div>
+		<div class="input-group">
+			<label>Couleur “Partiel”</label>
+			<input type="color" id="th_partial">
+		</div>
+		<div class="input-group">
+			<label>Couleur “Pas connu”</label>
+			<input type="color" id="th_unknown">
+		</div>
+
+		<div class="modal-buttons" style="flex-wrap:wrap">
+			<button class="btn-add" onclick="saveTheme()">Enregistrer</button>
+			<button class="btn-cancel" onclick="closeThemeModal()">Fermer</button>
+			<button class="btn-clear" onclick="resetTheme()">Réinitialiser</button>
+			<button class="btn-export" onclick="exportTheme()">Exporter</button>
+			<label class="btn-action btn-action-secondary" style="cursor:pointer">
+				Importer
+				<input type="file" id="themeImportInput" accept="application/json" style="display:none">
+			</label>
+		</div>
+	</div>
+</div>
 <div id="comparatorModal">
     <div class="comparator-container">
         <div class="comparator-header" style="padding:10px 20px;">
@@ -462,7 +572,119 @@
 <script>
 	// VARIABLES GLOBALES FLASHCARDS
 let categories = {}, results = {}, currentCategory = null, currentFolder = null, currentList = null, currentPage = 'home', currentIndex = 0, isFlipped = false, isReviewMode = false, reviewIndices = [], stats = {known: 0, partial: 0, unknown: 0}, currentEditingSide = null, renameTarget = null, openCategories = {};
+    // ====== THEME ======
+const THEME_KEY = 'flashcards_theme_v1';
+const themeVars = [
+	['--bg-gradient-from','th_bg_from'],
+	['--bg-gradient-to','th_bg_to'],
+	['--primary','th_primary'],
+	['--primary-2','th_primary2'],
+	['--accent','th_accent'],
+	['--accent-2','th_accent2'],
+	['--text','th_text'],
+	['--text-soft','th_text_soft'],
+	['--panel','th_panel'],
+	['--panel-muted','th_panel_muted'],
+	['--border','th_border'],
+	['--card-bg','th_card_bg'],
+	['--known','th_known'],
+	['--partial','th_partial'],
+	['--unknown','th_unknown'],
+];
 
+function getComputedVar(name){
+	return getComputedStyle(document.documentElement).getPropertyValue(name).trim();
+}
+function setVar(name, value){
+	document.documentElement.style.setProperty(name, value);
+}
+
+function openThemeModal(){
+	// Pré-remplir avec les valeurs actuelles
+	for(const [cssVar, inputId] of themeVars){
+		const v = getComputedVar(cssVar) || '';
+		const input = document.getElementById(inputId);
+		if(input) input.value = toColor(v) || '#000000';
+	}
+	document.getElementById('themeModal').classList.add('show');
+}
+function closeThemeModal(){
+	document.getElementById('themeModal').classList.remove('show');
+}
+
+// Convertit rgb(...) ou vide -> #rrggbb si possible
+function toColor(v){
+	if(!v) return null;
+	const s=v.trim();
+	if(/^#([0-9a-f]{3}|[0-9a-f]{6})$/i.test(s)) return s;
+	const m = s.match(/^rgb\((\d+),\s*(\d+),\s*(\d+)\)$/i);
+	if(m){
+		const r = (+m[1]).toString(16).padStart(2,'0');
+		const g = (+m[2]).toString(16).padStart(2,'0');
+		const b = (+m[3]).toString(16).padStart(2,'0');
+		return '#'+r+g+b;
+	}
+	return null;
+}
+
+function saveTheme(){
+	const theme = {};
+	for(const [cssVar, inputId] of themeVars){
+		const input = document.getElementById(inputId);
+		if(input && input.value){
+			theme[cssVar] = input.value;
+			setVar(cssVar, input.value);
+		}
+	}
+	localStorage.setItem(THEME_KEY, JSON.stringify(theme));
+	alert('Thème enregistré ✓');
+}
+
+function loadTheme(){
+	try{
+		const raw = localStorage.getItem(THEME_KEY);
+		if(!raw) return;
+		const theme = JSON.parse(raw);
+		Object.entries(theme).forEach(([cssVar, value]) => setVar(cssVar, value));
+	}catch(e){ console.warn('Theme load error', e); }
+}
+
+function resetTheme(){
+	localStorage.removeItem(THEME_KEY);
+	// Supprime les overrides inline, retombe sur les valeurs par défaut du :root
+	for(const [cssVar] of themeVars){
+		document.documentElement.style.removeProperty(cssVar);
+	}
+	alert('Thème réinitialisé');
+}
+
+function exportTheme(){
+	try{
+		const raw = localStorage.getItem(THEME_KEY) || '{}';
+		const blob = new Blob([raw], {type:'application/json'});
+		const url = URL.createObjectURL(blob);
+		const a = document.createElement('a');
+		a.href = url; a.download = 'theme.json';
+		document.body.appendChild(a); a.click();
+		document.body.removeChild(a); URL.revokeObjectURL(url);
+	}catch(e){ alert('Export impossible'); }
+}
+
+document.getElementById('themeImportInput')?.addEventListener('change', e=>{
+	const file = e.target.files?.[0];
+	if(!file) return;
+	const reader = new FileReader();
+	reader.onload = ev=>{
+		try{
+			const theme = JSON.parse(ev.target.result);
+			Object.entries(theme).forEach(([cssVar, value]) => setVar(cssVar, value));
+			localStorage.setItem(THEME_KEY, JSON.stringify(theme));
+			alert('Thème importé ✓');
+		}catch(err){ alert('Fichier invalide.'); }
+		e.target.value = '';
+	};
+	reader.readAsText(file);
+});
 // --- MODE INTÉGRÉ (iframe) ---
 function getQueryParams() {
 	const p = new URLSearchParams(window.location.search);
@@ -1564,6 +1786,7 @@ oldTA.value = "Le contrat entre en vigueur le 1er janvier 2024.\nLe prix est de 
 newTA.value = "Le contrat prend effet le 1er janvier 2025.\nLe prix est de 120 €.\nLe client accepte pleinement les conditions générales.";
 
 // INIT FLASHCARDS
+loadTheme();
 loadData();
 bootstrapEmbedIfAny();
     </script>
